# lfric_catalyst_adaptor

./: LICENSE  README.md  Singularity
src/cxx/: CMakeLists.txt  adaptor.cxx  adaptor.h  coprocessor.cxx  coprocessor.h  vtk_pipeline.cxx  vtk_pipeline.h
src/cxx/test/: CMakeLists.txt  adaptor_test.cxx  catch_main.cxx  coprocessor_test.cxx  vtk_pipeline_test.cxx
src/python/: coproc.py
src/python/pipelines/: full_output.py  meridional_slice.py  spherical_slice.py  spherical_slice_mollweide.py  spherical_slice_rendered.py  spherical_slice_rendered_coastlines.py  spherical_slice_with_contours.py  topo_contours.py  velocity_field.py  velocity_field_llr.py
src/python/postprocessing/: map_project.py
