cmake_minimum_required(VERSION 2.8.8)

project(catalyst_adaptor_unittests C CXX)

set(USE_CATALYST ON CACHE BOOL "Link with Catalyst")
option(BUILD_SHARED_LIBS "Build shared library to simplify linking" ON)

if(USE_CATALYST)
  find_package(ParaView 4.1 REQUIRED COMPONENTS vtkPVPythonCatalyst)
  include("${PARAVIEW_USE_FILE}")
  set(UnitTest_SRCS catch_main.cxx adaptor_test.cxx coprocessor_test.cxx)
  add_executable (catalyst_adaptor_unittests ${UnitTest_SRCS})
  target_compile_features(catalyst_adaptor_unittests PRIVATE cxx_std_11)
  target_include_directories(catalyst_adaptor_unittests PRIVATE ${PROJECT_SOURCE_DIR}/..)
  target_link_libraries(catalyst_adaptor_unittests LINK_PRIVATE catalyst_adaptor vtkPVPythonCatalyst)
  add_definitions("-DUSE_CATALYST")
  if(NOT PARAVIEW_USE_MPI)
    message(SEND_ERROR "ParaView must be built with MPI enabled")
  endif()
  include(vtkModuleMacros)
  include(vtkMPI)
  vtk_mpi_link(catalyst_adaptor_unittests)
else()
  target_link_libraries(catalyst_adaptor_unittests LINK_PRIVATE ${MPI_LIBRARIES})
endif()

option(BUILD_TESTING "Build Testing" OFF)
if(BUILD_TESTING)
  include(CTest)
  add_test (NAME UnitTests COMMAND catalyst_adaptor_unittests)
endif()
